--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,12 +2,18 @@
 name = "app"
 version = "0.1.0"
 description = "A simple FastAPI template using Supabase for user management and authentication."
+authors = [{ name = "Jürgen Altszeimer", email = "brokdar89@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.17.1",
+    "asyncpg>=0.30.0",
+    "fastapi-users>=15.0.1",
     "fastapi[standard]>=0.121.0",
+    "psycopg[binary]>=3.2.12",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.11.0",
+    "sqlalchemy[asyncio]>=2.0.44",
     "sqlmodel>=0.0.27",
     "structlog>=25.5.0",
 ]
