--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,8 @@ show_column_numbers = true
 show_error_codes = true
 show_error_context = true
 disallow_untyped_decorators = false
+namespace_packages = true
+explicit_package_bases = true
 
 [tool.ruff]
 line-length = 88
