--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,6 @@ services:
       - SUPER_USER__NAME=${SUPER_USER_NAME}
       - SUPER_USER__EMAIL=${SUPER_USER_EMAIL}
       - SUPER_USER__PASSWORD=${SUPER_USER_PASSWORD}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - LOG__LEVEL=${LOG_LEVEL}
       - API_PATH=${API_PATH}
     depends_on:
@@ -71,7 +70,10 @@ services:
       - SUPER_USER__NAME=${SUPER_USER_NAME}
       - SUPER_USER__EMAIL=${SUPER_USER_EMAIL}
       - SUPER_USER__PASSWORD=${SUPER_USER_PASSWORD}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - JWT__SECRET_KEY=${JWT_SECRET_KEY}
+      - JWT__ALGORITHM=${JWT_ALGORITHM}
+      - JWT__ACCESS_TOKEN_EXPIRE_MINUTES=${JWT_ACCESS_TOKEN_EXPIRE_MINUTES}
+      - JWT__REFRESH_TOKEN_EXPIRE_DAYS=${JWT_REFRESH_TOKEN_EXPIRE_DAYS}
       - LOG__LEVEL=${LOG_LEVEL}
       - API_PATH=${API_PATH}
     depends_on:
