--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "bcrypt>=4.3.0",
     "fastapi-users>=15.0.1",
     "fastapi[standard]>=0.121.0",
+    "makefun>=1.16.0",
     "psycopg[binary]>=3.2.12",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.11.0",
