Refactor project configuration and documentation
- Updated `.claude/settings.local.json` to include additional Bash commands and cleaned up deny/ask arrays.
- Modified `.devcontainer/devcontainer.json` for better formatting of forward ports.
- Enhanced `.env.example` with variable naming conventions and nested configuration explanations.
- Added `json.format.keepLines` setting in `.vscode/settings.json` for improved JSON formatting.
- Created `README.md` for FastAPI Starter Template, detailing features, quick start, and project structure.
- Introduced `.dockerignore` to exclude unnecessary files from Docker context.
- Updated `CLAUDE.md` to reflect changes in logging configuration and settings access.
- Expanded `README.md` in the backend directory with comprehensive developer guide and testing strategies.
- Improved logging configuration documentation to clarify nested structure in environment variables.
- Adjusted `docker-compose.yml` to use `expose` instead of `ports` for the database service.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,15 +2,17 @@
 	"name": "Python 3",
 	"image": "mcr.microsoft.com/devcontainers/python:2-3.12-bullseye",
 	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
-		"ghcr.io/devcontainers/features/git-lfs:1": {},
-		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/devcontainers/features/node:1": {},
-		"ghcr.io/devcontainers-extra/features/curl-apt-get:1": {},
-		"ghcr.io/dotnet/aspire-devcontainer-feature/dotnetaspire:1": {}
+		"ghcr.io/devcontainers/features/docker-in-docker:2": { },
+		"ghcr.io/devcontainers/features/git-lfs:1": { },
+		"ghcr.io/devcontainers/features/github-cli:1": { },
+		"ghcr.io/devcontainers/features/node:1": { },
+		"ghcr.io/devcontainers-extra/features/curl-apt-get:1": { }
 	},
 	"postCreateCommand": "bash .devcontainer/startup.sh",
-	"forwardPorts": [8000, 5432],
+	"forwardPorts": [
+		8000,
+		5432
+	],
 	"portsAttributes": {
 		"8000": {
 			"label": "API Service",
