--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,18 @@
 # Copy this file to .env and update the values for your environment
 # Required values are marked with REQUIRED
 # Optional values have sensible defaults
+#
+# IMPORTANT: Variable Naming Convention
+# ============================================================================
+# This file uses flat variable names (e.g., LOG_LEVEL, POSTGRES_HOST) for
+# simplicity. These are mapped to nested configuration internally:
+#   - Flat:   LOG_LEVEL         → Used in this .env file
+#   - Nested: LOG__LEVEL        → Used when setting env vars directly
+#   - Code:   settings.LOG.LEVEL → Used in Python code
+#
+# The docker-compose.yml handles the mapping from flat to nested format.
+# If you set environment variables directly (not via .env), use the nested
+# format with double underscores: LOG__LEVEL, DATABASE__SERVER, etc.
 
 # ============================================================================
 # PostgreSQL Database Configuration
