--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -89,3 +89,7 @@ ignore-decorators = ["typing.overload"]
 [tool.ruff.lint.pyupgrade]
 # Preserve types, even if a file imports `from __future__ import annotations`.
 keep-runtime-typing = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
