Remove Alembic migration testing workflow and add integration tests for base repository
- Deleted the GitHub Actions workflow for testing Alembic migrations.
- Updated `.claude/settings.local.json` to include a new script for integration tests.
- Modified `.dockerignore` to exclude all markdown files except for `README.md`.
- Created new directories and files for integration tests, including:
  - `backend/tests/integration/core/__init__.py`
  - `backend/tests/integration/core/base/__init__.py`
  - `backend/tests/integration/core/base/repositories/__init__.py`
  - `backend/tests/integration/core/base/repositories/conftest.py` with test fixtures.
  - `backend/tests/integration/core/base/repositories/test_base_repository.py` containing comprehensive integration tests for the `BaseRepository` class.

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -40,7 +40,8 @@ coverage.xml
 
 # Documentation
 docs/
-*.md
+*.md           # Exclude all markdown files
+!README.md     # But include README.md (needed for pyproject.toml)
 CLAUDE.md
 
 # Development files
