feat: enhance BulkOperationsMixin with optimized bulk_create, bulk_delete, and bulk_upsert operations; add integration tests for bulk operations

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -92,4 +92,8 @@ keep-runtime-typing = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-testpaths = ["tests"]
+testpaths = ["tests/unit"]
+filterwarnings = [
+    "ignore::DeprecationWarning:sqlalchemy",
+    "ignore::DeprecationWarning:app.core.base.repositories.bulk",
+]
