--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,20 +1,19 @@
 [project]
 name = "app"
 version = "0.1.0"
-description = "A simple FastAPI template using Supabase for user management and authentication."
+description = "A FastAPI template with user management and authentication."
 authors = [{ name = "Jürgen Altszeimer", email = "brokdar89@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "alembic>=1.17.1",
+    "alembic>=1.17.2",
     "asyncpg>=0.30.0",
-    "bcrypt>=4.3.0",
-    "fastapi-users>=15.0.1",
-    "fastapi[standard]>=0.121.0",
+    "bcrypt>=5.0.0",
+    "fastapi[standard]>=0.121.2",
     "makefun>=1.16.0",
     "psycopg[binary]>=3.2.12",
     "pydantic>=2.12.4",
-    "pydantic-settings>=2.11.0",
+    "pydantic-settings>=2.12.0",
     "pyjwt[crypto]>=2.10.1",
     "sqlalchemy[asyncio]>=2.0.44",
     "sqlmodel>=0.0.27",
@@ -23,13 +22,13 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "coverage>=7.11.0",
+    "coverage>=7.11.3",
     "mypy>=1.18.2",
-    "pytest>=8.4.2",
-    "pytest-asyncio>=1.2.0",
-    "pytest-cov>=7.0.0",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=2.12.1",
     "pytest-mock>=3.15.1",
-    "ruff>=0.14.4",
+    "ruff>=0.14.5",
 ]
 
 [build-system]
