Consolidate auth feature toggles into AuthSettings
Move feature toggles from settings.features.auth.* to settings.auth.*
to simplify configuration hierarchy:

- Add enabled field to JWTSettings and APIKeySettings
- Add master auth.enabled switch to AuthSettings
- Remove FeatureSettings and AuthFeatureSettings classes
- Update environment variables: FEATURES__AUTH__* -> AUTH__*
- Add integration test conftest for auth skip logic based on toggles
- Update docker-compose and .env.example with new variable names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,9 @@ services:
       - LOG__FILE_PATH=${LOG_FILE_PATH:-}
       - LOG__DISABLE_COLORS=${LOG_DISABLE_COLORS:-false}
       - API_PATH=${API_PATH}
+      - AUTH__ENABLED=${AUTH_ENABLED:-true}
+      - AUTH__JWT__ENABLED=${AUTH_JWT_ENABLED:-true}
+      - AUTH__API_KEY__ENABLED=${AUTH_API_KEY_ENABLED:-false}
     depends_on:
       db:
         condition: service_healthy
