--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,14 @@ LOG_LEVEL=INFO
 LOG_DISABLE_COLORS=false
 
 # ============================================================================
+# Authentication Feature Toggles
+# ============================================================================
+# Master switch for authentication (when false, no auth routes registered)
+AUTH_ENABLED=true
+AUTH_JWT_ENABLED=true
+AUTH_API_KEY_ENABLED=false
+
+# ============================================================================
 # Environment Configuration
 # ============================================================================
 # Application environment: development, staging, production
