--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
     "pyjwt[crypto]>=2.10.1",
+    "slowapi>=0.1.9",
     "sqlalchemy[asyncio]>=2.0.44",
     "sqlmodel>=0.0.27",
     "structlog>=25.5.0",
