Update environment configuration and fix docker-compose mappings
- Restructure .env.example to comment out settings with defaults
- Add rate limiting env vars (JWT_LOGIN_RATE_LIMIT, JWT_REFRESH_RATE_LIMIT)
- Add API key configuration env vars (MAX_PER_USER, EXPIRATION_DAYS, etc.)
- Fix nested delimiter in docker-compose (AUTH__JWT_* → AUTH__JWT__*)
- Add missing env var mappings for app settings (VERSION, CORS_ORIGINS, etc.)
- Add sensible defaults to all docker-compose environment mappings

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # ============================================================================
 # FastAPI Template - Environment Configuration Example
 # ============================================================================
-# Copy this file to .env and update the values for your environment
-# Required values are marked with REQUIRED
-# Optional values have sensible defaults
+# Copy this file to .env and update the values for your environment.
+# - Settings with default values are commented out but show their defaults
+# - Uncomment and modify any setting you want to change
+# - REQUIRED settings must be set for production deployments
 #
 # IMPORTANT: Variable Naming Convention
 # ============================================================================
@@ -11,7 +12,7 @@
 # simplicity. These are mapped to nested configuration internally:
 #   - Flat:   LOG_LEVEL         → Used in this .env file
 #   - Nested: LOG__LEVEL        → Used when setting env vars directly
-#   - Code:   settings.LOG.LEVEL → Used in Python code
+#   - Code:   settings.log.level → Used in Python code
 #
 # The docker-compose.yml handles the mapping from flat to nested format.
 # If you set environment variables directly (not via .env), use the nested
@@ -29,13 +30,13 @@ POSTGRES_DB=fastapi_template
 # ============================================================================
 # Application Configuration
 # ============================================================================
-API_PATH=/api/v1
-VERSION=1.0.0
-APPLICATION_NAME=FastAPI Template
+# API_PATH=/api/v1
+# VERSION=1.0.0
+# APPLICATION_NAME=FastAPI Template
+# ENVIRONMENT=development
 
-# CORS Origins (comma-separated list or ["*"] for all origins)
-# CORS_ORIGINS=["http://localhost:3000","http://localhost:8080"]
-CORS_ORIGINS=["*"]
+# CORS Origins (JSON array format)
+# CORS_ORIGINS=["*"]
 
 # ============================================================================
 # Super User / Admin Configuration
@@ -48,29 +49,30 @@ SUPER_USER_PASSWORD=admin
 # ============================================================================
 # JWT Authentication Configuration
 # ============================================================================
-# REQUIRED: Must be at least 32 characters long
+# REQUIRED for production: Must be at least 32 characters long
 # Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+# If not set, a random key is generated (not suitable for production!)
 JWT_SECRET_KEY=your-secret-key-at-least-32-characters-long-change-this
 
-# JWT algorithm (HS256, HS384, HS512, RS256, etc.)
 JWT_ALGORITHM=HS256
-
-# Token expiration times
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=15
 JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# ============================================================================
-# Logging Configuration
-# ============================================================================
-# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
-LOG_LEVEL=INFO
+# Rate limiting for JWT endpoints (format: "count/period" e.g., "5/minute", "100/hour")
+# JWT_LOGIN_RATE_LIMIT=5/minute
+# JWT_REFRESH_RATE_LIMIT=10/minute
 
-# Optional: Path to log file (enables JSON file logging with rotation)
-# If not set, only console logging is used
-# LOG_FILE_PATH=logs/app.log
+# ============================================================================
+# API Key Authentication Configuration
+# ============================================================================
+# API_KEY_ENABLED=false
+# API_KEY_MAX_PER_USER=5
+# API_KEY_DEFAULT_EXPIRATION_DAYS=30
+# API_KEY_HEADER_NAME=X-API-Key
 
-# Disable colored console output (auto-detected if false)
-LOG_DISABLE_COLORS=false
+# Rate limiting for API key management endpoints
+# API_KEY_CREATE_RATE_LIMIT=5/minute
+# API_KEY_DELETE_RATE_LIMIT=10/minute
 
 # ============================================================================
 # Authentication Feature Toggles
@@ -81,8 +83,14 @@ AUTH_JWT_ENABLED=true
 AUTH_API_KEY_ENABLED=false
 
 # ============================================================================
-# Environment Configuration
+# Logging Configuration
 # ============================================================================
-# Application environment: development, staging, production
-# Controls error message verbosity and security features
-ENVIRONMENT=development
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# LOG_LEVEL=INFO
+
+# Path to log file (enables JSON file logging with rotation)
+# If not set, only console logging is used
+# LOG_FILE_PATH=logs/app.log
+
+# Disable colored console output (colors are auto-detected if false)
+# LOG_DISABLE_COLORS=false
