--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "app"
-version = "0.1.0"
+dynamic = ["version"]
 description = "A FastAPI template with user management and authentication."
 authors = [{ name = "Jürgen Altszeimer", email = "brokdar89@gmail.com" }]
 readme = "README.md"
@@ -33,8 +33,12 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "vcs"
+raw-options = { root = "..", version_scheme = "guess-next-dev", local_scheme = "no-local-version" }
 
 [tool.uv]
 link-mode = "copy"
