Implement dynamic versioning with hatch-vcs (#12)
## Summary

- Configure hatch-vcs in pyproject.toml for Git tag-based version
detection
- Add computed `version` property in Settings using `importlib.metadata`
- Update FastAPI app to use `settings.version` instead of hardcoded
value

## Test plan

- [x] Verify version displays correctly in `/docs` endpoint
- [x] Create a test tag and confirm version matches
- [x] Confirm dev version increments after commits past a tag

Closes #9

---------

Co-authored-by: Jürgen Altszeimer <Brokdar89@gmal.com>

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "app"
-version = "0.1.0"
+dynamic = ["version"]
 description = "A FastAPI template with user management and authentication."
 authors = [{ name = "Jürgen Altszeimer", email = "brokdar89@gmail.com" }]
 readme = "README.md"
@@ -33,8 +33,13 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "vcs"
+fallback-version = "0.0.0.dev0"
+raw-options = { search_parent_directories = true, version_scheme = "guess-next-dev", local_scheme = "no-local-version" }
 
 [tool.uv]
 link-mode = "copy"
