Rename PostgresSettings.server to host for consistency
Use the conventional 'host' field name which aligns with PostgreSQL's
native connection parameters (PGHOST), SQLAlchemy, and standard database
library conventions.

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@
 # - REQUIRED settings must be set for production deployments
 #
 # This file uses Pydantic-native nested variable names with double underscores
-# (e.g., POSTGRES__SERVER, AUTH__JWT__SECRET_KEY). These map directly to the
-# nested configuration structure in code (e.g., settings.postgres.server).
+# (e.g., POSTGRES__HOST, AUTH__JWT__SECRET_KEY). These map directly to the
+# nested configuration structure in code (e.g., settings.postgres.host).
 
 # ============================================================================
 # PostgreSQL Database Configuration
 # ============================================================================
-POSTGRES__SERVER=db
+POSTGRES__HOST=db
 POSTGRES__PORT=5432
 POSTGRES__USER=postgres
 POSTGRES__PASSWORD=your-secure-password
