Simplify configuration with Pydantic-native environment variables (#13)
## Summary

Closes #11

- Replace flat environment variable names with Pydantic-native nested
format using double underscores (e.g., `POSTGRES__SERVER` instead of
`POSTGRES_HOST`)
- Remove the ~50 lines of variable mapping in `docker-compose.yml`
- Rename `DatabaseSettings` to `PostgresSettings` for clarity

## Benefits

- **Single source of truth** - Pydantic config defines the schema
- **Two places to update** instead of three when adding new
configuration
- **Simpler docker-compose.yml** - eliminates the translation layer
- **Consistent naming** across all environments (local, Docker, K8s)

## Changes

- `.env.example` - Convert to nested variable names
- `README.md` / `backend/README.md` - Update documentation
- `backend/app/config.py` - Rename DatabaseSettings to PostgresSettings
- `docker-compose.yml` - Remove environment mapping layer
- `backend/scripts/run-integration-tests.sh` - Update variable names
- `backend/tests/integration/` - Update test settings

## Test plan

- [x] All unit tests pass (404 tests)
- [x] All integration tests pass (178 tests)
- [x] Type checking passes (mypy)
- [x] Linting passes (ruff)

--- a/.env.example
+++ b/.env.example
@@ -6,26 +6,18 @@
 # - Uncomment and modify any setting you want to change
 # - REQUIRED settings must be set for production deployments
 #
-# IMPORTANT: Variable Naming Convention
-# ============================================================================
-# This file uses flat variable names (e.g., LOG_LEVEL, POSTGRES_HOST) for
-# simplicity. These are mapped to nested configuration internally:
-#   - Flat:   LOG_LEVEL         → Used in this .env file
-#   - Nested: LOG__LEVEL        → Used when setting env vars directly
-#   - Code:   settings.log.level → Used in Python code
-#
-# The docker-compose.yml handles the mapping from flat to nested format.
-# If you set environment variables directly (not via .env), use the nested
-# format with double underscores: LOG__LEVEL, DATABASE__SERVER, etc.
+# This file uses Pydantic-native nested variable names with double underscores
+# (e.g., POSTGRES__HOST, AUTH__JWT__SECRET_KEY). These map directly to the
+# nested configuration structure in code (e.g., settings.postgres.host).
 
 # ============================================================================
 # PostgreSQL Database Configuration
 # ============================================================================
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your-secure-password
-POSTGRES_DB=fastapi_template
+POSTGRES__HOST=db
+POSTGRES__PORT=5432
+POSTGRES__USER=postgres
+POSTGRES__PASSWORD=your-secure-password
+POSTGRES__DB=fastapi_template
 
 # ============================================================================
 # Application Configuration
@@ -42,9 +34,9 @@ POSTGRES_DB=fastapi_template
 # Super User / Admin Configuration
 # ============================================================================
 # Initial superuser created during application startup
-SUPER_USER_NAME=admin
-SUPER_USER_EMAIL=admin@example.com
-SUPER_USER_PASSWORD=admin
+SUPER_USER__NAME=admin
+SUPER_USER__EMAIL=admin@example.com
+SUPER_USER__PASSWORD=admin
 
 # ============================================================================
 # JWT Authentication Configuration
@@ -52,45 +44,45 @@ SUPER_USER_PASSWORD=admin
 # REQUIRED for production: Must be at least 32 characters long
 # Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
 # If not set, a random key is generated (not suitable for production!)
-JWT_SECRET_KEY=your-secret-key-at-least-32-characters-long-change-this
+AUTH__JWT__SECRET_KEY=your-secret-key-at-least-32-characters-long-change-this
 
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=15
-JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
+AUTH__JWT__ALGORITHM=HS256
+AUTH__JWT__ACCESS_TOKEN_EXPIRE_MINUTES=15
+AUTH__JWT__REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # Rate limiting for JWT endpoints (format: "count/period" e.g., "5/minute", "100/hour")
-# JWT_LOGIN_RATE_LIMIT=5/minute
-# JWT_REFRESH_RATE_LIMIT=10/minute
+# AUTH__JWT__LOGIN_RATE_LIMIT=5/minute
+# AUTH__JWT__REFRESH_RATE_LIMIT=10/minute
 
 # ============================================================================
 # API Key Authentication Configuration
 # ============================================================================
-# API_KEY_ENABLED=false
-# API_KEY_MAX_PER_USER=5
-# API_KEY_DEFAULT_EXPIRATION_DAYS=30
-# API_KEY_HEADER_NAME=X-API-Key
+# AUTH__API_KEY__ENABLED=false
+# AUTH__API_KEY__MAX_PER_USER=5
+# AUTH__API_KEY__DEFAULT_EXPIRATION_DAYS=30
+# AUTH__API_KEY__HEADER_NAME=X-API-Key
 
 # Rate limiting for API key management endpoints
-# API_KEY_CREATE_RATE_LIMIT=5/minute
-# API_KEY_DELETE_RATE_LIMIT=10/minute
+# AUTH__API_KEY__CREATE_RATE_LIMIT=5/minute
+# AUTH__API_KEY__DELETE_RATE_LIMIT=10/minute
 
 # ============================================================================
 # Authentication Feature Toggles
 # ============================================================================
 # Master switch for authentication (when false, no auth routes registered)
-AUTH_ENABLED=true
-AUTH_JWT_ENABLED=true
-AUTH_API_KEY_ENABLED=false
+AUTH__ENABLED=true
+AUTH__JWT__ENABLED=true
+AUTH__API_KEY__ENABLED=false
 
 # ============================================================================
 # Logging Configuration
 # ============================================================================
 # Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
-# LOG_LEVEL=INFO
+# LOG__LEVEL=INFO
 
 # Path to log file (enables JSON file logging with rotation)
 # If not set, only console logging is used
-# LOG_FILE_PATH=logs/app.log
+# LOG__FILE_PATH=logs/app.log
 
 # Disable colored console output (colors are auto-detected if false)
-# LOG_DISABLE_COLORS=false
+# LOG__DISABLE_COLORS=false
